fix(librewolf): autohide-sidebar change z-index to 2 because of firefox 133

--- a/modules/librewolf/chrome/autohide_sidebar.css
+++ b/modules/librewolf/chrome/autohide_sidebar.css
@@ -7,14 +7,16 @@ See the above repository for updates as well as full license text. */
 #sidebar-box{
   --uc-sidebar-width: 40px;
   --uc-sidebar-hover-width: 210px;
-  --uc-autohide-sidebar-delay: 300ms; /* Wait 0.6s before hiding sidebar */
+  --uc-autohide-sidebar-delay: 300ms; /* Wait 0.3s before hiding sidebar */
+  --uc-autohide-transition-duration: 115ms;
+  --uc-autohide-transition-type: linear;
+  --browser-area-z-index-sidebar: 2;
   position: relative;
   min-width: var(--uc-sidebar-width) !important;
   width: var(--uc-sidebar-width) !important;
   max-width: var(--uc-sidebar-width) !important;
-  z-index:1;
+  z-index: var(--browser-area-z-index-sidebar,2);
 }
-
 #sidebar-box[positionend]{ direction: rtl }
 #sidebar-box[positionend] > *{ direction: ltr }
 
@@ -40,7 +42,7 @@ See the above repository for updates as well as full license text. */
 
 #sidebar-header,
 #sidebar{
-  transition: min-width 115ms linear var(--uc-autohide-sidebar-delay) !important;
+  transition: min-width var(--uc-autohide-transition-duration) var(--uc-autohide-transition-type) var(--uc-autohide-sidebar-delay) !important;
   min-width: var(--uc-sidebar-width) !important;
   will-change: min-width;
 }
